--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,7 +34,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.gson-2.2.4.jar}:\
-    ${reference.SocialKademlia.jar}
+    ${reference.SocialKademlia.jar}:\
+    ${reference.Kademlia.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -63,7 +64,9 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.Kademlia=../Kademlia
 project.SocialKademlia=../SocialKademlia
+reference.Kademlia.jar=${project.Kademlia}/dist/Kademlia.jar
 reference.SocialKademlia.jar=${project.SocialKademlia}/dist/SocialKademlia.jar
 run.classpath=\
     ${javac.classpath}:\
